add input search

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    
+    <input type="text" class="js-movie-search">
+    <button type="submit" class="js-search-btn">search</button>
   </body>
 </html>
