update library gallery

--- a/src/index.html
+++ b/src/index.html
@@ -50,20 +50,23 @@
           <img class="modal-card__img" src="./images/card-placeholder.png" alt="placeholder" width="200" height="300">
           <div class="modal-card__description">
             <h2 class="modal-card__title">Movie Title</h2>
-            <div class="description-fields">
-              <ul class="parameter__list">
-                <li class="parameter__item">Vote / Votes</li>
-                <li class="parameter__item">Popularity</li>
-                <li class="parameter__item">Original Title</li>
-                <li class="parameter__item">Genre</li>
-              </ul>
-              <ul class="value__list">
-                <li class="value__item"><span class="value__vote">7.3</span> / <span class="value__votes">1260</span></li>
-                <li class="value__item">100.2</li>
-                <li class="value__item value__original-title">Original Title</li>
-                <li class="value__item value__genres">Genre</li>
-              </ul>
-            </div>
+              <table class="description-table">
+                <tr class="description">
+                  <td class="parameter__item">Vote / Votes</td>
+                  <td class="value__item"><span class="value__vote">7.3</span> / <span class="value__votes">1260</span></td>
+                <tr>
+                  <td class="parameter__item"> Popularity</td>
+                  <td class="value__item">100.2</td>
+                </tr>
+                <tr>
+                  <td class="parameter__item">Original Title</td>
+                  <td class="value__item value__original-title">Original Title...</td>
+                </tr>
+                <tr>
+                  <td class="parameter__item">Genres</td>
+                  <td class="value__item value__genres">genres...</td>
+                </tr>
+              </table>
             <h3 class="modal-card__about">ABOUT</h3>
             <p class="modal-card__about-overview">Lorem ipsum dolor sit amet consectetur adipisicing elit. In
               quibusdam ex id
