--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./sass/main.scss">
+    <link rel="icon" href="../images/favicon.png">
     <title>Filmoteka</title> 
     
   </head>
@@ -84,6 +85,5 @@
     </div>
 
     <script type="module" src="./index.js"></script>
-    <!-- <script src="./scripts/modal-window.js"></script> -->
   </body>
 </html>
